[package]
name = "vex2pdf"
version = "0.1.0"
edition = "2021"
authors = ["Salem Bouraoui <jurassic.lizard@protonmail.com>"]
license = "MIT"
description = "A tool to convert CycloneDX(VEX) JSON documents to PDF reports"
repository = "https://github.com/jurassicLizard/vex2pdf"
documentation = "https://docs.rs/vex2pdf"  # This will work after publishing
readme = "README.md"
keywords = ["vex", "pdf", "security", "cyclonedx", "vulnerability"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
genpdf = "0.2.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"

